Restructure to use workspaces

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "toddle-os",
   "module": "index.ts",
-  "type": "module"
+  "type": "module",
+  "workspaces": [
+    "packages/*"
+  ]
 }
