--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
-  "files": [
-    "./packages/core/index.ts"
-  ],
-  "name": "toddle-os",
+  "name": "toddle",
   "module": "index.ts",
   "type": "module",
   "workspaces": [
-    "packages/*"
-  ]
+    "./core",
+    "./ssr"
+  ],
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "7.0.2",
+    "@typescript-eslint/parser": "7.0.2",
+    "eslint-plugin-inclusive-language": "2.2.1",
+    "eslint": "8.56.0",
+    "prettier-plugin-organize-imports": "4.1.0",
+    "prettier": "3.3.3",
+    "typescript": "5.6.3"
+  },
+  "scripts": {
+    "lint": "eslint --quiet .",
+    "prettier": "prettier --check '*.{json,js}' '**/*.{js,ts}'",
+    "prettier:write": "prettier --write  '*.{json,js}' './**/*.{js,ts}'",
+    "typecheck": "cd core && bun typecheck && cd ../ssr && bun run typecheck"
+  }
 }
