--- a/core/package.json
+++ b/core/package.json
@@ -4,8 +4,7 @@
   "devDependencies": {
     "@types/jest": "29.5.13",
     "@types/react": "18.3.10",
-    "jest": "29.7.0",
-    "typescript": "5.6.2"
+    "jest": "29.7.0"
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
@@ -13,8 +12,5 @@
     "test": "bun test",
     "test:watch": "bun test --watch",
     "test:debug": "bun test --watch --inspect-wait=localhost:6499/toddle"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
