--- a/core/package.json
+++ b/core/package.json
@@ -7,8 +7,8 @@
     "jest": "29.7.0"
   },
   "scripts": {
-    "typecheck": "tsc --noEmit",
-    "typecheck:watch": "tsc --noEmit -w",
+    "typecheck": "tsc --noEmit --project tsconfig.json",
+    "typecheck:watch": "tsc --noEmit -w --project tsconfig.json",
     "test": "bun test",
     "test:watch": "bun test --watch",
     "test:debug": "bun test --watch --inspect-wait=localhost:6499/toddle"
