Invalid commit to test dependency loops

--- a/ssr/tsconfig.json
+++ b/ssr/tsconfig.json
@@ -16,6 +16,6 @@
     "outDir": "dist",
     "declaration": true
   },
-  "include": ["src", "ssr.types.d.ts"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
