--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -14,6 +14,9 @@
     "strictBuiltinIteratorReturn": true,
     "target": "ESNext",
     "outDir": "dist",
-    "declaration": true
-  }
+    "declaration": true,
+    "noResolve": false
+  },
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
