--- a/ssr/package.json
+++ b/ssr/package.json
@@ -8,6 +8,6 @@
     "typecheck:watch": "tsc --noEmit -w --project tsconfig.json"
   },
   "dependencies": {
-    "@toddle/core": "workspace:*"
+    "@toddle/core": "*"
   }
 }
