Add files to package.json

--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "prettier": "prettier --check '*.{json,js}' '**/*.{js,ts}'",
     "prettier:write": "prettier --write  '*.{json,js}' './**/*.{js,ts}'",
     "typecheck": "cd core && bun typecheck && cd ../ssr && bun run typecheck"
-  }
+  },
+  "files": [
+    "core/build",
+    "ssr/build"
+  ]
 }
