--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "./ssr"
   ],
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "7.0.2",
-    "@typescript-eslint/parser": "7.0.2",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.14.0",
+    "@typescript-eslint/eslint-plugin": "8.14.0",
+    "@typescript-eslint/parser": "8.14.0",
+    "eslint": "9.14.0",
     "eslint-plugin-inclusive-language": "2.2.1",
-    "eslint": "8.56.0",
-    "prettier-plugin-organize-imports": "4.1.0",
     "prettier": "3.3.3",
+    "prettier-plugin-organize-imports": "4.1.0",
     "typescript": "5.6.3"
   },
   "scripts": {
