--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,15 @@
-name: "Test"
+name: 'Test'
 
 on:
   push:
     branches-ignore:
       - main
     paths-ignore:
-      - ".vscode/**"
+      - '.vscode/**'
 
 # This allows a subsequently queued workflow run to interrupt previous runs
 concurrency:
-  group: "${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}"
+  group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
   cancel-in-progress: true
 
 jobs:
@@ -39,7 +39,7 @@ jobs:
         run: bun install --frozen-lockfile
       - name: Run core tests
         run: |
-          cd core
+          cd packages/core
           bun test
   test-ssr:
     runs-on: ubuntu-latest
@@ -52,5 +52,5 @@ jobs:
         run: bun install --frozen-lockfile
       - name: Test ssr
         run: |
-          cd ssr
+          cd packages/ssr
           bun test
