--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@toddle/core",
+  "name": "@toddledev/core",
   "version": "0.0.1",
   "devDependencies": {
     "@types/jest": "29.5.13",
