--- a/packages/ssr/tsconfig.json
+++ b/packages/ssr/tsconfig.json
@@ -11,7 +11,7 @@
     "strictBuiltinIteratorReturn": true,
     "target": "ESNext",
     "paths": {
-      "@toddle/ssr/*": ["./*"]
+      "@toddledev/ssr/*": ["./*"]
     },
     "outDir": "dist",
     "declaration": true
