--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "5.6.3"
   },
   "scripts": {
+    "build": "cd packages/core && bun run build && cd ../ssr && bun run build",
     "lint": "eslint --quiet .",
     "prettier": "prettier --check '*.{json,js}' '**/*.{js,ts}'",
     "prettier:write": "prettier --write  '*.{json,js}' './**/*.{js,ts}'",
