--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,14 @@
 {
   "name": "@toddledev/core",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.3",
+  "license": "Apache-2.0",
+  "homepage": "https://github.com/toddledev/toddle",
+  "private": "false",
+  "dependencies": {
+    "@types/react": "18.3.10"
+  },
   "devDependencies": {
     "@types/jest": "29.5.13",
-    "@types/react": "18.3.10",
     "jest": "29.7.0"
   },
   "scripts": {
