--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -8,8 +8,8 @@
     "build": "tsc",
     "publish": "bun publish --access public",
     "test": "bun test",
-    "typecheck": "tsc --noEmit --project tsconfig.json",
-    "typecheck:watch": "tsc --noEmit -w --project tsconfig.json"
+    "typecheck": "tsc --noEmit",
+    "watch": "tsc --noEmit -w"
   },
   "files": [
     "dist"
