--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -12,7 +12,8 @@
     "watch": "tsc --noEmit -w"
   },
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
