--- a/package.json
+++ b/package.json
@@ -8,21 +8,22 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.14.0",
-    "@typescript-eslint/eslint-plugin": "8.14.0",
-    "@typescript-eslint/parser": "8.14.0",
+    "@eslint/js": "9.16.0",
+    "@typescript-eslint/eslint-plugin": "8.16.0",
+    "@typescript-eslint/parser": "8.16.0",
+    "@types/jest": "29.5.14",
     "eslint": "9.14.0",
     "eslint-plugin-inclusive-language": "2.2.1",
+    "jest": "29.7.0",
     "prettier": "3.3.3",
     "prettier-plugin-organize-imports": "4.1.0",
-    "typescript": "5.6.3"
+    "typescript": "5.7.2"
   },
   "scripts": {
-    "build": "cd packages/core && bun run build && cd ../ssr && bun run build && cd ../lib && bun run build && cd ../search && bun run build",
+    "build": "cd packages/core && bun run build && cd ../ssr && bun run build && cd ../lib && bun run build && cd ../search && bun run build && cd ../runtime && bun run build",
     "lint": "eslint --quiet .",
     "prettier": "prettier --check '*.{json,js}' '**/*.{js,ts}'",
     "prettier:write": "prettier --write  '*.{json,js}' './**/*.{js,ts}'",
-    "typecheck": "cd packages/core && bun typecheck && cd ../ssr && bun run typecheck && cd ../lib && bun run typecheck && cd ../search && bun run typecheck"
+    "typecheck": "cd packages/core && bun typecheck && cd ../ssr && bun run typecheck && cd ../lib && bun run typecheck && cd ../search && bun run typecheck && cd ../runtime && bun run typecheck"
   }
 }
