--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -8,12 +8,9 @@
     "@toddledev/core": "workspace:*"
   },
   "devDependencies": {
-    "@types/jest": "29.5.13",
     "@types/node": "22.7.4",
     "jest-environment-jsdom": "29.7.0",
-    "jest": "29.7.0",
-    "ts-jest": "29.2.5",
-    "typescript": "5.6.2"
+    "ts-jest": "29.2.5"
   },
   "scripts": {
     "build": "bun ./bin/generate.js",
