--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -4,10 +4,7 @@
   "version": "0.0.1-alpha.1",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/jest": "29.5.13",
-    "jest": "29.7.0",
-    "ts-jest": "29.2.5",
-    "typescript": "5.7.2"
+    "ts-jest": "29.2.5"
   },
   "dependencies": {
     "@toddledev/ssr": "workspace:*"
