--- a/.github/workflows/test_hono_example.yml
+++ b/.github/workflows/test_hono_example.yml
@@ -19,6 +19,10 @@ jobs:
         run: bun install --frozen-lockfile
       - name: Build
         run: bun run build
+      - name: Install example dependencies
+        run: |
+          cd examples/hono
+          bun install --frozen-lockfile
       - name: TSC Hono Example
         run: |
           cd examples/hono
