Ensure example workflow runs more often

--- a/.github/workflows/test_hono_example.yml
+++ b/.github/workflows/test_hono_example.yml
@@ -4,8 +4,9 @@ on:
   push:
     branches-ignore:
       - main
-    paths:
-      - 'examples/hono/**/*'
+    paths-ignore:
+      - '.vscode/**'
+      - '**/*/README.md'
 
 jobs:
   tsc-hono-example:
