--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toddledev/runtime",
-  "version": "0.0.1-alpha.2",
+  "version": "0.0.1-alpha.3",
   "license": "Apache-2.0",
   "homepage": "https://github.com/toddledev/toddle",
   "dependencies": {
@@ -15,7 +15,7 @@
     "build": "tsc",
     "npm-publish": "bun run build && bun publish --access public",
     "typecheck": "tsc --noEmit",
-    "watch": "tsc --noEmit -w"
+    "watch": "tsc -w"
   },
   "files": [
     "dist",
