--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -18,6 +18,7 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "@toddledev/core": "workspace:*",
+    "@toddledev/std-lib": "workspace:*",
     "cookie": "1.0.2",
     "xss": "1.0.15"
   }
