--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
       - name: Login to npm
-        run: bun npm login
+        run: bunx npm login
       - name: Build
         run: bun run build
         # cd packages/${{ inputs.package }}
