--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,14 +23,13 @@ jobs:
         uses: oven-sh/setup-bun@v1
       - name: Install dependencies
         run: bun install --frozen-lockfile
-      - name: Login to npm
-        run: bunx npm login
       - name: Build
         run: bun run build
         # cd packages/${{ inputs.package }}
       - name: Publish
         run: |
           cd packages/ssr
+          bunx npm login
           bun npm-publish
-    env:
-      NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
