--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,7 @@ jobs:
           token: ${{ secrets.NPM_TOKEN }}
           package: packages/ssr
           access: public
-          tag: 0.0.2-alpha.9
+          tag: 0.0.3
       # - name: Publish
       #   run: |
       #     cd packages/ssr
