--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1-alpha.8",
   "license": "Apache-2.0",
   "dependencies": {
-    "@toddledev/ssr": "workspace:*"
+    "@toddledev/ssr": "*"
   },
   "scripts": {
     "build": "tsc",
