--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/toddledev/toddle",
   "dependencies": {
     "fast-deep-equal": "3.1.3",
-    "@toddledev/core": "*"
+    "@toddledev/core": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "22.7.4",
