--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -4,7 +4,7 @@
   "license": "Apache-2.0",
   "homepage": "https://github.com/toddledev/toddle",
   "dependencies": {
-    "@toddledev/core": "*",
+    "@toddledev/core": "workspace:*",
     "fast-deep-equal": "3.1.3",
     "path-to-regexp": "6.3.0"
   },
