--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # Based on https://raw.githubusercontent.com/github/gitignore/main/Node.gitignore
 
+# Legacy bun lockfile
+bun.lockb
+
+# We don't use npm
+package-lock.json
+
 # Logs
 
 logs
